# Revelio

./: .gitignore  README.md  bof_traj.json  experiments.md  hello_world_traj.json  libspng_traj.json  memory_analysis_traj.json  pyproject.toml  requirements.txt  todo.md
.cursor/rules/: project.mdc  style.mdc
docker/file-scan/: Dockerfile
docker/memcheck/: Dockerfile  README.md
docker/proj4-latest-asan/: Dockerfile
examples/bof/: Makefile  README.md  report_bof.md
examples/libspng/: build.sh
output/report/: libspng_report_20251121-013534.md  libspng_report_20251124-214820.md  libspng_report_20251124-222403.md
output/trajectory/: libspng_traj_20251121-013534.json  libspng_traj_20251124-214820.json  libspng_traj_20251124-222403.json  libspng_traj_20251124-230232.json  libspng_traj_20251125-010055.json
poc_craft/: run_poc.py
scripts/: arvo_ossfuzz  arvo_v8  batch_claude_code.py  batch_file_scan.py  batch_scan_filter.sh  build_cve_dataset.py  build_general_prompt.py  download_cves.py  download_repos.py  evaluate_localization.py  generate_tips.py  prepare_ossfuzz_project.sh  run_arvo_batch.sh  summarize_failures.py  validate_patches.py  verify_dedup_post_confirm.py
scripts/batch_scan_filter/: .env.example  README.md  files.curl.txt  files.dnsmasq.txt  files.libheif.txt  files.openexr.txt  files.openssl.txt  files.poppler.txt  files.proj4.txt  files.sleuthkit.txt  jobs.poppler-retry.tsv  jobs.tsv  probe_keys.py
src/revelio/: __init__.py  __main__.py
src/vulagent/: __init__.py  __main__.py
tools/: config.py  cost_report.py  inspector.py  validate_poc.py  validate_pov.py
website/: index.html  server.py
zero-day/: bug_dashboard.html
zero-day/01-assimp-fbx-stack-overflow/: README.md  gen_poc.py  reproduce.sh
zero-day/02-assimp-collada-xml-stack-overflow/: ISSUE.md  poc.dae
zero-day/03-assimp-collada-buildhierarchy-stack-overflow/: poc.dae
zero-day/04-assimp-collada-empty-attrs-abrt/: README.md  gen_poc.py
zero-day/05-gpac-ipmp-heap-overflow/: ISSUE.md  harness.c
zero-day/assimp/: status.md
(+520 files in other folders)
