[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "revelio"
version = "0.0.1"
description = "A trustworthy and precise vulnerability detection AI agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "platformdirs>=3.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "litellm>=1.75.5",
    "tenacity>=8.0.0",
    "requests>=2.28.0",
    "prompt_toolkit>=3.0.0",
    "textual>=0.40.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "claude-agent-sdk",
]

[project.scripts]
revelio = "revelio.run.detect:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["revelio*"]

[tool.setuptools.package-data]
revelio = ["config/**/*"]
